Added the createOrder and getAllOrders API